# captici-orchestrator

./: .dockerignore  .gitignore  Dockerfile  LICENSE  example.http  main.py  pyproject.toml  requirements.txt
cdpb_test_orchestrator/: __init__.py  __main__.py  cdpb_test_orchestrator.py  data_objects.py  settings.py
cdpb_test_orchestrator/api/: __init__.py  cdpb_test.py  config.py  internal.py  project.py  response_bodies.py
cdpb_test_orchestrator/cdpb_testing/: __init__.py  cdpb_test.py  evaluate.py
cdpb_test_orchestrator/k8s/: __init__.py  k8s_api.py  templates.py
cdpb_test_orchestrator/storage/: __init__.py  cdpb_test_groups.py  cdpb_test_in_group.py  cdpb_tests.py  configs.py  projects.py  repos.py  tars.py
config/: production.ini  test.ini
kubernetes/: ingress-web-example.yaml  kustomization.yaml  test-orchestrator.yaml  test-pod-init.yaml  web-example-svc.yaml
kubernetes/cdpb-test-orchestrator/: deployment.yaml  ingress.yaml  kustomization.yaml  rbac.yaml  service.yaml  test-orchestrator.yaml.old
kubernetes/cert-manager/: kustomization.yaml  letsencrypt-production.yaml  letsencrypt-staging.yaml
kubernetes/dashboard/: get_token.sh  kustomization.yaml
kubernetes/example/: deployment.yaml  ingress.yaml  kustomization.yaml  service.yaml
kubernetes/nginx-ingress/: deploy.yaml  kustomization.yaml  service-patch.yaml
kubernetes/registry/: configmap.yaml  deployment.yaml  ingress.yaml  kustomization.yaml  namespace.yaml  service.yaml
kubernetes/test-orchestrator/: deployment.yaml  ingress.yaml  kustomization.yaml  namespace.yaml  service.yaml  test-orchestrator.yaml.old
scripts/: delete_failed.sh  get_token.sh  update_deployment.sh
test/: conftest.py  context.py
test/k8s/: test_k8s_api.py
test/storage/: test_repos.py  test_tars.py
test_orchestrator/: __main__.py  main.py  parallelism.py  settings.py  test_orchestrator.py
test_orchestrator/api/: __init__.py  config.py  enums.py  internal.py  project.py  request_bodies.py  response_bodies.py  test.py
test_orchestrator/evaluation/: parsing.py  reports.py
test_orchestrator/k8s/: __init__.py  k8s_api.py  templates.py
test_orchestrator/k8s_interaction/: __init__.py  container_build.py  container_spawn.py  k8s_api.py  suffering_container_build.py.txt  templates.py
test_orchestrator/kubernetes/: container_build.py  k8s_api.py  templates.py
test_orchestrator/storage/: __init__.py  repos.py  (+10 more)
tests/: conftest.py  context.py  test_git.py  test_parsers.py
(+41 files in other folders)
