[tool.poetry]
name = "cdpb-test-orchestrator"
version = "0.1.0"
description = ""
authors = ["Nicole Heinimann <nh51siku@studserv.uni-leipzig.de>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.70.0"
email-validator = "^1.1.3"
kubernetes = "^19.15.0"
GitPython = "^3.1.24"
uvicorn = "^0.15.0"
SQLAlchemy = {extras = ["mypy"], version = "^1.4.28"}
junitparser = "^2.2.0"

[tool.poetry.dev-dependencies]
fastapi = {extras = ["all"], version = "^0.70.0"}
pytest = "^6.2.5"
ipython = "^7.29.0"
pip = "^21.3.1"
flake8 = "^4.0.1"
mypy = "^0.920"
black = "^21.12b0"
vulture = "^2.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
start = "cdpb_test_orchestrator.main:start"

[tool.mypy]
plugins = ["sqlalchemy.ext.mypy.plugin"]
ignore_missing_imports = "True"

[tool.flake8]
max-line-length = "88"
extend-ignore = "E203"
